<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    app:elevation="12dp"
    android:layout_marginHorizontal="@dimen/margin_8"
    android:layout_marginVertical="@dimen/margin_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_12">



    <RelativeLayout
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:padding="@dimen/margin_8"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8">

        <TextView
            android:id="@+id/tv_label_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_order_id"
            android:textColor="@color/greySecondary"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_label_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_order_id"
            android:gravity="center"
            android:text="@string/label_order_date"
            android:textColor="@color/greySecondary"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_label_order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_order_date"
            android:gravity="center"
            android:text="@string/label_order_amount"
            android:textColor="@color/greySecondary"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/tv_label_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_order_amount"
            android:gravity="center"
            android:text="@string/label_order_status"
            android:textColor="@color/greySecondary"
            android:textSize="16sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/label_order_id"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_order_id"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/label_order_date"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_order_date"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/label_order_amount"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_order_amount"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/label_order_amount"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/item_cart" />

        <include layout="@layout/item_cart" />
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
