<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_normal" />


    <!-- Shadow below toolbar -->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/bg_shadow" />

    <RelativeLayout
        android:id="@+id/product_top_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:alpha="1.0"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient_up" />

        <!-- Back button -->
        <ImageView
            android:id="@+id/restaurant_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/restaurant_name"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_close_white_24px" />

        <TextView
            android:id="@+id/restaurant_name"
            style="@style/AppTheme.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/restaurant_rating"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="Some Product" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/restaurant_rating"
            style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/restaurant_category"
            android:layout_alignLeft="@+id/restaurant_name"
            app:mrb_progressTint="@android:color/white"
            app:mrb_secondaryProgressTint="@android:color/white" />

        <TextView
            android:id="@+id/restaurant_num_ratings"
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/restaurant_rating"
            android:layout_alignBottom="@+id/restaurant_rating"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/restaurant_rating"
            android:gravity="center"
            android:textColor="@android:color/white"
            tools:text="(10)" />

        <TextView
            android:id="@+id/restaurant_category"
            style="@style/AppTheme.Subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/restaurant_name"
            android:layout_alignBottom="@+id/restaurant_image"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            tools:text="Samsung" />

        <TextView
            android:id="@+id/restaurant_city_divider"
            style="@style/AppTheme.TextDivider"
            android:layout_alignTop="@+id/restaurant_category"
            android:layout_toRightOf="@+id/restaurant_category"
            android:text="@string/divider_bullet"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/restaurant_city"
            style="@style/AppTheme.Subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_category"
            android:layout_alignTop="@+id/restaurant_category"
            android:layout_toRightOf="@+id/restaurant_city_divider"
            android:textColor="@android:color/white"
            tools:text="LCD" />

        <TextView
            android:id="@+id/restaurant_price"
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/restaurant_name"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="$$$" />

        <TextView
            android:id="@+id/add_to_cart"
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/restaurant_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/yellow_gradient"
            android:clickable="true"
            android:enabled="true"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingVertical="@dimen/margin_8"
            android:text="@string/txt_add_to_cart"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_show_rating_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/product_top_card"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-28dp"
        app:srcCompat="@drawable/ic_add_white_24px" />

    <!-- Ratings -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_ratings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_top_card"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:paddingTop="28dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        tools:listitem="@layout/item_rating" />

    <!-- View for empty ratings -->
    <LinearLayout
        android:id="@+id/view_empty_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_top_card"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            style="@style/AppTheme.PizzaGuy"
            android:src="@drawable/pizza_monster" />

        <TextView
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_no_reviews"
            android:textColor="@color/greyDisabled" />

    </LinearLayout>

</RelativeLayout>
